--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
