--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -14,12 +14,16 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "swal": "^0.1.0",
+    "sweetalert2": "^11.14.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
