--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -1,16 +1,27 @@
 {
+  "name": "notification-service",
+  "version": "1.0.0",
+  "description": "Email notification service",
+  "main": "dist/index.js",
   "dependencies": {
     "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.15",
-    "ts-node": "^10.9.2",
-    "tsc": "^2.0.4"
+    "ts-node": "^10.9.2"
   },
   "scripts": {
-    "start": "ts-node src/index"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
-    "@types/nodemailer": "^6.4.16"
+    "@types/node": "^22.7.9",
+    "@types/nodemailer": "^6.4.16",
+    "typescript": "^5.6.3"
   }
 }
