--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -17,8 +17,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "amqplib": "^0.10.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
@@ -27,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
