--- a/frontend-next/.env
+++ b/frontend-next/.env
@@ -1,2 +1,2 @@
- BASE_URL = http://localhost:5000/api/v1
- NEXT_PUBLIC_BASE_URL = http://localhost:5000/api/v1
+BASE_URL=http://localhost:3002/api/v1
+NEXT_PUBLIC_BASE_URL=http://localhost:3002/api/v1
