--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,13 +1,16 @@
 FROM node:20-alpine
 
-# Create app directory
+# Install netcat for wait script
+RUN apk add --no-cache netcat-openbsd
+
 WORKDIR /app
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-COPY package*.json ./
+# Copy wait script
+COPY wait-for.sh /wait-for.sh
+RUN chmod +x /wait-for.sh
 
 # Install dependencies
+COPY package*.json ./
 RUN npm install
 
 # Bundle app source
@@ -16,8 +19,5 @@ COPY . .
 # Build TypeScript code
 RUN npm run build
 
-# Expose port
-EXPOSE 3000
-
-# Start the service
-CMD ["npm", "start"]
+# Start the service with wait script
+CMD ["/bin/sh", "-c", "/wait-for.sh rabbitmq:5672 -- npm start"]
