--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up Docker
+        run: |
+          # Install Docker
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
+
+          # Install Docker Compose
+          DOCKER_COMPOSE_VERSION=1.29.2  # Specify the desired version
+          sudo curl -L "https://github.com/docker/compose/releases/download/$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Build Docker Images
         run: |
@@ -49,7 +57,7 @@ jobs:
 
     steps:
       - name: Copy SSH Key
-        run: echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > id_rsa && chmod 600 id_rsa
+        run: echo  > id_rsa && chmod 600 id_rsa
 
       - name: Deploy to VPS
         env:
