--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,8 @@ services:
       - DATABASE_URL=postgresql://postgres:KlVXqgEJKVIzLaE4fmI=@auth-db:5432/auth?schema=public
       - RABBITMQ_URL=amqp://rabbitmq:5672
       - PORT=3001
-      - JWT_SECRET_KEY =gfg_jwt_secret_key
-      - TOKEN_HEADER_KEY =hackathon_token_header_key
+      - JWT_SECRET_KEY=gfg_jwt_secret_key
+      - TOKEN_HEADER_KEY=hackathon_token_header_key
     depends_on:
       rabbitmq:
         condition: service_healthy
