--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -29,7 +29,7 @@
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
