--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Change this to your main branch if different
+      - main # Change this to your main branch if different
 
 jobs:
   build:
@@ -31,11 +31,11 @@ jobs:
       - name: Save Docker Images as Tar Files
         run: |
           # Save each service image to a tar file
-          docker save auth-service -o auth-service.tar
-          docker save ticket-service -o ticket-service.tar
-          docker save notification-service -o notification-service.tar
-          docker save frontend-next -o frontend-next.tar
-          docker save rabbitmq -o rabbitmq.tar
+          docker save auth-service:latest -o auth-service.tar
+          docker save ticket-service:latest -o ticket-service.tar
+          docker save notification-service:latest -o notification-service.tar
+          docker save frontend-next:latest -o frontend-next.tar
+          docker save rabbitmq:latest -o rabbitmq.tar
 
       - name: Copy SSH Key
         run: echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > id_rsa && chmod 600 id_rsa
@@ -53,7 +53,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # This job will only run after the build job completes successfully
+    needs: build # This job will only run after the build job completes successfully
 
     steps:
       - name: Copy SSH Key
