--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,81 +1,81 @@
-name: CI/CD Pipeline
+# .github/workflows/deploy.yml
+name: Deploy to VPS
 
 on:
   push:
-    branches:
-      - main # Change this to your main branch if different
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker
-        run: |
-          # Install Docker
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh get-docker.sh
-
-          # Install Docker Compose
-          DOCKER_COMPOSE_VERSION=1.29.2  # Specify the desired version
-          sudo curl -L "https://github.com/docker/compose/releases/download/$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Build Docker Images
-        run: |
-          docker-compose -f docker-compose.yaml build
-
-      - name: Save Docker Images as Tar Files
-        run: |
-          # Save each service image to a tar file
-          docker save auth-service:latest -o auth-service.tar
-          docker save ticket-service:latest -o ticket-service.tar
-          docker save notification-service:latest -o notification-service.tar
-          docker save frontend-next:latest -o frontend-next.tar
-          docker save rabbitmq:latest -o rabbitmq.tar
-
-      - name: Copy SSH Key
-        run: echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > id_rsa && chmod 600 id_rsa
-
-      - name: Transfer Images to VPS
-        env:
-          VPS_HOST: ${{ secrets.VPS_HOST }}
-          VPS_USER: ${{ secrets.VPS_USER }}
-        run: |
-          scp -i id_rsa -o StrictHostKeyChecking=no auth-service.tar $VPS_USER@$VPS_HOST:/tmp/
-          scp -i id_rsa -o StrictHostKeyChecking=no ticket-service.tar $VPS_USER@$VPS_HOST:/tmp/
-          scp -i id_rsa -o StrictHostKeyChecking=no notification-service.tar $VPS_USER@$VPS_HOST:/tmp/
-          scp -i id_rsa -o StrictHostKeyChecking=no frontend-next.tar $VPS_USER@$VPS_HOST:/tmp/
-          scp -i id_rsa -o StrictHostKeyChecking=no rabbitmq.tar $VPS_USER@$VPS_HOST:/tmp/
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build # This job will only run after the build job completes successfully
-
     steps:
-      - name: Copy SSH Key
-        run: echo  > id_rsa && chmod 600 id_rsa
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
+      # Build images first
+      - name: Build Docker images
+        run: docker-compose build
+
+      # List images to verify they were built
+      - name: List Docker images
+        run: docker images
+
+      # Save images with correct names
+      - name: Save Docker images
+        run: |
+          mkdir -p images
+          # Save using the full repository names
+          docker save \
+            buet-hackathon-auth-service:latest \
+            buet-hackathon-ticket-service:latest \
+            buet-hackathon-notification-service:latest \
+            buet-hackathon-frontend-next:latest \
+            rabbitmq:3-management | gzip > images/services.tar.gz
+
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
+
+      - name: Copy files to VPS
+        run: |
+          # Create SSH directory
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          echo "StrictHostKeyChecking no" >> ~/.ssh/config
+
+          sshpass -p '${{ secrets.VPS_PASSWORD }}' scp -o StrictHostKeyChecking=no \
+            docker-compose.yml \
+            images/services.tar.gz \
+            .env \
+            deploy.sh \
+            ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/app/
 
       - name: Deploy to VPS
-        env:
-          VPS_HOST: ${{ secrets.VPS_HOST }}
-          VPS_USER: ${{ secrets.VPS_USER }}
         run: |
-          ssh -i id_rsa -o StrictHostKeyChecking=no $VPS_USER@$VPS_HOST << 'EOF'
-            # Load images from tar files
-            docker load -i /tmp/auth-service.tar
-            docker load -i /tmp/ticket-service.tar
-            docker load -i /tmp/notification-service.tar
-            docker load -i /tmp/frontend-next.tar
-            docker load -i /tmp/rabbitmq.tar
-
-            # Clean up tar files
-            rm /tmp/*.tar
-
-            # Start or restart the services
-            cd /path/to/your/project
-            docker-compose up -d
-          EOF
+          sshpass -p '${{ secrets.VPS_PASSWORD }}' ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} '
+            cd ~/app
+            # Load the images
+            gunzip -c images/services.tar.gz | docker load
+            
+            # Create .env file
+            cat << EOF > .env
+            SMTP_USER=${{ secrets.SMTP_USER }}
+            SMTP_PASS=${{ secrets.SMTP_PASS }}
+            EOF
+            
+            # Make deploy script executable
+            chmod +x deploy.sh
+            
+            # Run deploy script
+            ./deploy.sh
+          '
