--- a/frontend-next/.env
+++ b/frontend-next/.env
@@ -1,2 +1,6 @@
 BASE_URL=http://localhost:3002/api/v1
 NEXT_PUBLIC_BASE_URL=http://localhost:3002/api/v1
+
+
+AUTH_URL=http://localhost:3001
+NEXT_PUBLIC_AUTH_URL=http://localhost:3001
