--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -16,12 +16,16 @@
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
     "@types/nodemailer": "^6.4.16",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
