--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -37,7 +37,10 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
-    "prisma": "^5.21.1"
+    "jest": "^29.7.0",
+    "prisma": "^5.21.1",
+    "ts-jest": "^29.2.5"
   }
 }
