--- a/ticket-service/tsconfig.json
+++ b/ticket-service/tsconfig.json
@@ -18,7 +18,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": ["jest", "node"]
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
