--- a/db/docker-compose.yaml
+++ b/db/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: KlVXqgEJKVIzLaE4fmI=
+      POSTGRES_PASSWORD: example
     ports:
-      - 5432:5432
+      - 5435:5432
     volumes:
       - postgres_db_data_container:/var/lib/postgresql/data
 
@@ -13,7 +13,7 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - 8079:8080
 
 volumes:
   postgres_db_data_container:
