--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
+    "node-cron": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
@@ -39,6 +40,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
+    "@types/node-cron": "^3.0.11",
     "jest": "^29.7.0",
     "prisma": "^5.21.1",
     "ts-jest": "^29.2.5"
