--- a/frontend-next/.env
+++ b/frontend-next/.env
@@ -1,6 +1,6 @@
-BASE_URL=http://localhost:3002/api/v1
-NEXT_PUBLIC_BASE_URL=http://localhost:3002/api/v1
+BASE_URL=http://api_gateway/ticket
+NEXT_PUBLIC_BASE_URL=http://api_gateway/ticket
 
 
-AUTH_URL=http://localhost:3001
-NEXT_PUBLIC_AUTH_URL=http://localhost:3001
+AUTH_URL=http://api_gateway/auth
+NEXT_PUBLIC_AUTH_URL=http://api_gateway/auth
