--- a/ticket-service/package.json
+++ b/ticket-service/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate-dev": "prisma migrate dev",
     "dev": "ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/src/server.js",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -43,6 +44,7 @@
     "@types/node-cron": "^3.0.11",
     "jest": "^29.7.0",
     "prisma": "^5.21.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5"
   }
 }
